--- a/layouts/partials/announcement_banner/announcement_banner.scss
+++ b/layouts/partials/announcement_banner/announcement_banner.scss
@@ -20,11 +20,11 @@
     top: 0;
     width: 100%;
     z-index: 9999;
-    @include gradient(#3023AE, #C024B6, 1);
+    @include gradient(#0EB90E, #66CC33, 1);
     a {
       display: block;
       color: #fff;
-      font-size: 22px;
+      font-size: 20px;
       margin-top: -2px;
     }
     ~ nav { // Push nav down because it's fixed we need 30px above
